// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest should render with compact prop 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="container"
    role="combobox"
  >
    <div
      class="root compact"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="undefined-message"
        autocomplete="off"
        class="input"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root clearRoot"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer compact"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with label 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="container"
    role="combobox"
  >
    <div
      class="root"
    >
      <label
        class=""
        for="Foo"
      >
        <span
          class="root baseline"
        >
          <span
            class=""
          >
            <strong
              class="root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="Foo-message"
        autocomplete="off"
        class="input"
        id="Foo"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root clearRoot"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer suggestionsContainer_withLabel"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with mobile backdrop 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="container"
    role="combobox"
  >
    <div
      class="root"
    >
      <label
        class="isLabelCoveredWithBackdrop LABEL_TEST_CLASS"
        for="Foo"
      >
        <span
          class="root baseline"
        >
          <span
            class=""
          >
            <strong
              class="root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="Foo-message"
        autocomplete="off"
        class="input"
        id="Foo"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root clearRoot"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer suggestionsContainer_withLabel"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop backdrop_isMobile"
  />
</div>
`;

exports[`Autosuggest should render with mobile full width 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="container"
    role="combobox"
  >
    <div
      class="root"
    >
      <label
        class="LABEL_TEST_CLASS"
        for="Foo"
      >
        <span
          class="root baseline"
        >
          <span
            class=""
          >
            <strong
              class="root"
            >
              Foo
            </strong>
             
          </span>
        </span>
      </label>
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="Foo-message"
        autocomplete="off"
        class="input"
        id="Foo"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root clearRoot"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer suggestionsContainer_withLabel suggestionsContainer_fullWidth"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with simple props 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="container"
    role="combobox"
  >
    <div
      class="root"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="undefined-message"
        autocomplete="off"
        class="input"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root clearRoot"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;

exports[`Autosuggest should render with suggestions 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    class="container containerOpen"
    role="combobox"
  >
    <div
      class="root"
    >
      <input
        aria-autocomplete="list"
        aria-controls="react-autowhatever-1"
        aria-describedby="undefined-message"
        autocomplete="off"
        class="input"
        type="text"
        value=""
      />
      <span
        class="clearField"
      >
        <div
          class="root"
        >
          <span
            class="root clearRoot"
          >
            mock svg
          </span>
        </div>
      </span>
      <div
        class="root"
      />
    </div>
    <div
      class="suggestionsContainer suggestionsContainerOpen"
      id="react-autowhatever-1"
      role="listbox"
    >
      <ul
        role="listbox"
      >
        <li
          aria-selected="false"
          class="suggestion"
          data-suggestion-index="0"
          id="react-autowhatever-1--item-0"
          role="option"
        >
          <span
            class="suggestion"
          >
            test
          </span>
        </li>
        <li
          aria-selected="false"
          class="suggestion"
          data-suggestion-index="1"
          id="react-autowhatever-1--item-1"
          role="option"
        >
          <span
            class="suggestion"
          >
            test 2
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="autosuggestBackdrop"
  />
</div>
`;
